--- a/scss/components/search.scss
+++ b/scss/components/search.scss
@@ -175,7 +175,7 @@ header .container.navbar { margin-bottom: 0; }
 @media (min-width: 768px) {
   .result-body {
     float: left;
-    width: 75%;
+    width: 100%;
   }
   .result-links {
     float: left;
